--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "author": "Attaphong Rattanaveerachanon",
   "license": "MIT",
