--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,11 +6,9 @@ COPY go.mod .
 COPY go.sum .
 
 RUN go mod download
+RUN go get -u github.com/cosmtrek/air
 
 COPY . .
-
-RUN go build ./cmd/main.go
-
-CMD ["./main"]
+CMD ["air"]
 
 
