--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.36",
+    "@types/react-dom": "^17.0.11",
     "eslint": "^7.11.0",
-    "eslint-plugin-react": "^7.26.1"
+    "eslint-plugin-react": "^7.26.1",
+    "typescript": "^4.5.2"
   }
 }
