--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "todo-app-study",
-  "version": "0.0.1",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "author": "Attaphong Rattanaveerachanon",
-  "license": "MIT",
   "dependencies": {
-    "node-sass": "^6.0.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "4.0.3",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -27,14 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.9",
-    "@types/react": "^17.0.36",
-    "@types/react-dom": "^17.0.11",
-    "eslint": "^7.11.0",
-    "eslint-plugin-react": "^7.26.1",
-    "typescript": "^4.5.2"
   }
 }
